# pyhomogeneity

./: CLAUDE.md  main.py  pyproject.toml
Examples/: Example_pyHomogeneity.ipynb
docs/: API.md
scratchpad/: benchmark_results.md  jax_performance_comparison.md
scripts/: benchmark_tests.py
src/pyhomogeneity/: __init__.py  _utils.py  _version.py  buishand_lr.py  buishand_q.py  buishand_range.py  buishand_u.py  pettitt.py  snht.py  von_neumann.py
tests/: conftest.py  test_buishand_lr.py  test_buishand_q.py  test_buishand_range.py  test_buishand_u.py  test_edge_cases.py  test_integration.py  test_pettitt.py  test_snht.py  test_von_neumann.py
