[project]
name = "pyhomogeneity"
version = "1.1.0"
description = "A python package for homogeneity test of time series data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Md. Manjurul Hussain Shourov", email = "mmhs013@gmail.com"}
]
keywords = ["homogeneity", "changepoint", "time series", "statistics"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Development Status :: 5 - Production/Stable"
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jax>=0.8.0",
    "jaxlib>=0.8.0",
    "matplotlib>=3.10.7",
    "numpy>=1.24.0",
    "pandas>=2.3.3",
    "scipy>=1.10.0",
    "statsmodels>=0.14.5",
]


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3",       # tests
    "pytest-cov>=6.2.1",
    "ruff>=0.12",        # linter + formatter
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["notebooks/", "experiments/"]

[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------
# ty (fast static type checker)
# -----------------------
[tool.ty]
[tool.ty.rules]
possibly-unresolved-reference = "warn"

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=notebooks/",
    "--ignore=experiments/",
]
